--- a/devrev-snapin/code/package.json
+++ b/devrev-snapin/code/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@devrev/typescript-sdk": "^1.1.17",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "yargs": "^17.6.2"
   }
 }
