--- a/flask/.env
+++ b/flask/.env
@@ -2,3 +2,4 @@ MONGO_URI =  "mongodb+srv://devesh2002:devesh@cluster0.njgowvp.mongodb.net/pymon
 RAPIDAPI_KEY = '9d6e6bf9ddmsh8422d38c504cb8fp1b8683jsn71ba8eefbe72'
 FIREWORKS_API_KEY = "dIbW2IMpPWB1kguO7XzcFASRQVoyW9GSjZHU36UFvqMCOP0H"
 RAPIDAPI_HOST = 'twitter154.p.rapidapi.com'
+OPENAIAPI_KEY = "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" 
